<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aimFragment"
        android:icon="@drawable/ic_nav_aim"
        android:title="@string/tab_aim" />

    <item
        android:id="@+id/pathFragment"
        android:icon="@drawable/ic_nav_path"
        android:title="@string/tab_path" />

    <item
        android:id="@+id/elephantFragment"
        android:icon="@drawable/ic_nav_blank"
        android:title="" />


    <item
        android:id="@+id/northStarFragment"
        android:icon="@drawable/ic_nav_north_star"
        android:title="@string/tab_north_star" />

    <item
        android:id="@+id/mahoutFragment"
        android:icon="@drawable/ic_nav_mahout"
        android:title="@string/tab_mahout" />

</menu>

